Additional minor simplifications and preparations for compatibility with JDK >= 8 (avoid deprecation warnings), plus a number of JavaDoc corrections